--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,8 @@ copyright: 'Copyright &copy; 2019 - 2020 Bùi Hải Nam'
 
 # Configuratio
 theme:
-  name: 'material'
+  name: material
+  #custom_dir: 'mkdocs-material'
   # 404 page
   static_templates:
     - 404.html
@@ -27,16 +28,15 @@ theme:
     primary: 'Cyan'
     accent: 'Cyan'
   font:
-    text: 'Medium'
-    code: 'Medium Mono'
+    text: 'Roboto Light'
+    code: 'Roboto Light'
   language: vi
   feature:
-      tabs: true
+      tabs: false
 extra:
   manifest: 'manifest.webmanifest'
-  disqus: 'your-shortname'
   social:
-    - type: 'link'
+    - type: 'globe'
       link: 'https://www.facebook.com/apnic.net'
     - type: 'github'
       link: 'https://github.com/VNAPNIC'
@@ -82,6 +82,8 @@ google_analytics:
   - 'auto'
 
 # Page tree
-#nav:
-#  - Flutter: index.md
-#  - Dart: dart.md
+nav:
+  - Flutter: index.md
+  - Dart:
+    - Cài đặt môi trường: dart_environment_settings.md
+    - Dart cơ bản: dart_core.md
