--- a/page/mkdocs.yml
+++ b/page/mkdocs.yml
@@ -100,5 +100,7 @@ nav:
   - Dart:
     - Dart Cài đặt môi trường: dart/dart_environment_settings.md
     - Dart Basic: dart/dart_core.md
-    - So sánh Dart và Swift: dart/dart_dart_vs_swift_a_comparison.md
+    #- So sánh Dart và Swift: dart/dart_dart_vs_swift_a_comparison.md
     - Dart Async: dart/dart_async_intro.md
+  - Flutter:
+    - 9 lý do tại sao nên chọn Flutter: flutter/flutter_introduction.md
